Added UI and more features

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="form-div">
         <form id="form">
+            <h3>Add New Event</h3>
             <label for="eventTitle">Event Title</label>
             <br>
             <input type="text" name="eventTitle" id="eventTitle">
@@ -32,11 +33,11 @@
             <textarea name="Description" id="Description"></textarea>
             <br>
             <button type="submit">Submit</button>
-        
         </form>
     </div>
     <div class="events-div">
         <!-- Events will be displayed here -->
+         <button id="clearEvents">Clear Events</button>
     </div>
     <div class="dom-div">
         <!-- Showing live, the key pressed by user -->
